<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded"
    >


    <com.lohjason.genericqr.ui.scanner.CameraSourcePreview
        android:id="@+id/sv_camera"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <include
        layout="@layout/overlay_scanner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_toggle_flash"
        android:drawableLeft="@drawable/ic_flash_on_24dp"
        android:layout_width="0dp"
        android:layout_height="@dimen/scan_icon_size"
        android:layout_margin="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:textColor="@color/toolbar_text"
        android:text="@string/flash"
        android:clickable="true"
        android:focusable="true"
        />

    <TextView
        android:id="@+id/tv_scan_history"
        android:drawableLeft="@drawable/ic_history_24dp"
        android:layout_width="0dp"
        android:layout_height="@dimen/scan_icon_size"
        android:layout_margin="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:textColor="@color/toolbar_text"
        android:text="@string/history"
        android:clickable="true"
        android:focusable="true"
        />

    <TextView
        android:id="@+id/tv_about"
        android:drawableLeft="@drawable/ic_help_24dp"
        android:layout_width="0dp"
        android:layout_height="@dimen/scan_icon_size"
        android:layout_margin="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:textColor="@color/toolbar_text"
        android:text="@string/about"
        android:clickable="true"
        android:focusable="true"
        />

</android.support.constraint.ConstraintLayout>